simple test changes

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
   
   /* header */
   header{
+    background: blue;
     display:flex;
     flex-direction:row;
     justify-content:space-evenly;
